# bitlbee-skype

./: .travis.yml  Makefile.am  README  configure.ac
skype/: Makefile.am  skype.c  skyped.py  skypesandbox.sh
